fix: rollback statistic to default behavior
